# raylib-example-game

./: .gitignore  .python-version  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build_binaries.yml  web_publish.yml
raylib_example_game/: __init__.py  __main__.py  ending_screen.py  game.py  gameplay_screen.py  logo_screen.py  options_screen.py  screens.py  title_screen.py
scripts/: build.py  build_web.py
