[project]
name = "raylib-example-game"
version = "0.3.1"
description = "A simple game example using Raylib Python bindings"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Electron Studio", email = "github@electronstudio.co.uk"}
]
keywords = ["raylib", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "raylib-sdl>=5.5.0.3",
]

[project.urls]
Homepage = "https://github.com/electronstudio/raylib-example-game"
Repository = "https://github.com/electronstudio/raylib-example-game.git"
Issues = "https://github.com/electronstudio/raylib-example-game/issues"

[project.scripts]
raylib-example-game = "raylib_example_game:main"
build-binary = "scripts.build:main"
build-web = "scripts.build_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nuitka>=2.7.13",
    "pygbag",
]
